@@ -291,6 +291,43 @@ function htmlcdnboxes(req,res) {
 	     else document.getElementById("tapplis").style.display = "none";
 	   }
 	 }, false);
+
+	 window.addEventListener('DOMContentLoaded', (event) => {
+  `);
+  res.write('	   var applistats = ' + JSON.stringify(cdnboxStates.applistats));
+  res.write(`
+	   var memoapplistats = JSON.parse(sessionStorage.getItem('applistats'));
+	   var tab = document.getElementById("tapplis");
+	   var lignes = tab.getElementsByTagName("tr");
+           for (var i = 0; i < lignes.length; i++) {
+	     var cells = lignes[i].getElementsByTagName("td");
+	     if (cells.length > 0) {
+	       var cdnboxname = cells[0].innerHTML;
+	       for (var j = 1; j < cells.length; j++) {
+	         if (j === 1) {
+  `);
+  if (req.url.includes('applisdelta=true')) {
+    res.write(`
+                   cells[1].innerHTML = applistats[cdnboxname].count - memoapplistats[cdnboxname].count;
+		 } else {
+	           cells[j].innerHTML = 
+		     applistats[cdnboxname][cells[j].getAttribute('data-cdnbox')].count -
+		     memoapplistats[cdnboxname][cells[j].getAttribute('data-cdnbox')].count;
+    `);
+  } else {
+    res.write(`
+                   cells[1].innerHTML = applistats[cdnboxname].count;
+		   } else {
+	             cells[j].innerHTML = applistats[cdnboxname][cells[j].getAttribute('data-cdnbox')].count;
+    `);
+  }
+  res.write(`
+		 }
+	       }
+	     }
+	   }
+	   sessionStorage.setItem('applistats', JSON.stringify(applistats));
+	 });
        </script>\n` +
       '</head>\n<body>\n' +
       '<div class="head ' +
@@ -378,9 +415,9 @@ function htmlcdnboxes(req,res) {
   for (const appli of Object.keys(cdnboxStates.config.applis)) {
     res.write(
         '<tr><td class="name">' + appli + '</td>' +
-        '<td class="total number">' + cdnboxStates.applistats[appli].count + '</td>');
+        '<td class="total number">-</td>');
     for (const cdnbox of cdnboxStates.config.cdnboxes) {
-      res.write('<td class="number">' + cdnboxStates.applistats[appli][cdnbox.name].count + '</td>');
+      res.write('<td class="number" data-cdnbox="' + cdnbox.name + '">-</td>');
     }
     res.write( '</tr>');
   }
@@ -391,8 +428,9 @@ function htmlcdnboxes(req,res) {
 function htmlconsole(res,token) {
 
   res.write(`
-    <html>\n<header><meta charset="utf-8"><title>CDNBoxd Console</title>
+    <html><header><meta charset="utf-8"><title>CDNBoxd Console</title>
     <script>
+    window.addEventListener('DOMContentLoaded', (event) => { refreshframes(); });
     function refreshframes() {
       var framelist = document.getElementsByTagName("iframe");
       var res = framelist[0].src.match(/token=([0-9]+)-[0-9A-Fa-f]+/);
@@ -403,6 +441,7 @@ function htmlconsole(res,token) {
           var url =  framelist[i].src.replace(/\\\?.*$/,"?") + '` + token + `';
           url += '&cdnboxes=' + document.getElementById('cdnbox').checked;
 	  url += '&applis=' + document.getElementById('applis').checked;
+	  url += '&applisdelta=' + document.getElementById('applisdelta').checked;
 	  framelist[i].src = url;
         }
       }
@@ -454,8 +493,10 @@ function htmlconsole(res,token) {
       <button type="button" id="startaf" onClick="startautorefresh();">Start</button>
       <input type="checkbox" id="cdnbox" name="cdnbox" checked onchange="changeframe();">
       <label for="cdnbox">Cdnboxes</label>
-      <input type="checkbox" id="applis" name="applis" checked onchange="changeframe();">
+      <input type="checkbox" id="applis" name="applis" onchange="changeframe();">
       <label for="applis">Applis</label>
+      <input type="checkbox" id="applisdelta" name="applis" onchange="changeframe();">
+      <label for="applisdelta">Derivate</label>
   </div>\n`);
   for (var i=0; i < cdnboxStates.config.cdnboxes.length; i++ ) {
     var cdnboxState = cdnboxStates[cdnboxStates.config.cdnboxes[i].name];
@@ -463,7 +504,7 @@ function htmlconsole(res,token) {
       res.write(
           '<iframe width="540" src="' +
           cdnboxState.config.proto + '//' + cdnboxState.config.hostname + '/cdn/cdnboxes?' +
-          token + '&cdnboxes=true&applis=false" onload="setframeheight(this);"></iframe>\n'
+          token + '&cdnboxes=true" onload="setframeheight(this);"></iframe>\n'
       );
     }
   }
