@@ -1,3 +1,5 @@
+* 1619305431
+ - introduce derivative for appli stats in console.
 * 1619200646
  - adds aapli to DNS logs.
 * 1619175974
